Bug 109790 - FILEOPEN: RTF: Imported text has incorrect font size
Summary: FILEOPEN: RTF: Imported text has incorrect font size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.1 target:24.2.0
Keywords: bibisected, bisected, filter:rtf, regression
: 104077 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-07-28 10:28 UTC by Xisco Faulí
Modified: 2023-12-05 07:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.0 (277.63 KB, image/png)
2017-07-28 10:28 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-07-28 10:28:28 UTC
Created attachment 134925 [details]
comparison MSO 2010 and LibreOffice 6.0

Steps to reproduce:
1. Open attachment 88380 [details] from bug 71065

Observed behaviour: font size on first page is 18 instead of 10

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: e0b6a4a2d2dec4e9614f27fc03f84b1c578028ec
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group


[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-07-28 10:29:23 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2015-05-18 05:38:32 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2015-05-18 05:47:20 (GMT)
commit cbe79789a0fc9b80b2fd14a5abfe0973a2cb69dc (patch)
tree 11b1f41d7a05a6787513b0ef2efb3f2ce9085465
parent 3aebc670e1816a8f4f0759e97d8f39b6aab05044 (diff)

tdf#86814 RTF import: fix sometimes lost bold style
The problem was that commit 76c0d0abc89cd8948706083c2660b71a2dad670c
(RTF import: adapt getProperties() to createStyleProperties(),
2014-09-07) only made the character style sprms/attributes a flat list,
but not the paragraph style ones. Fixing that inconsistency avoids the
tokenizer adding unwanted default sprms, which cause the bold sprms go
away in the bugdoc.

Bisected with bibisect-50max

Adding Cc: to Miklos Vajna
Comment 2 Miklos Vajna 2017-07-28 15:41:50 UTC
Just to be clear: you mean "22", not "18", right?

At least that's something I see: in Table1:A1, the "XXXX" below the "Bill To" has font size 22, and it's 10 in Word.

(Perhaps please be a bit less brave next time and just mark a bug as UNCONFIRMED till somebody else confirms it. :-) )
Comment 3 Xisco Faulí 2017-07-31 19:28:15 UTC
(In reply to Miklos Vajna from comment #2)
> Just to be clear: you mean "22", not "18", right?
> 
> At least that's something I see: in Table1:A1, the "XXXX" below the "Bill
> To" has font size 22, and it's 10 in Word.

Yes, you're right. sorry for my mistake.

> 
> (Perhaps please be a bit less brave next time and just mark a bug as
> UNCONFIRMED till somebody else confirms it. :-) )

hehe, well, it' not a matter of bravery, it's just that we have a rule of thumb in QA that bisected bugs can be auto-confirmed. Otherwise, someone else needs to confirm it. That's why I confirmed this bug myself.
Comment 4 Commit Notification 2017-08-01 08:14:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aaa6a5202a447fb4e86d5f016d8e79fbc34a3ed7

tdf#109790 RTF import: keep remembering paragraph style between \cell and \row

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2017-08-01 08:35:24 UTC
Ah, I see. OK, I trust you know what you're doing. :-)
Comment 6 Xisco Faulí 2017-08-01 22:54:28 UTC
Fix verified in

Version: 6.0.0.0.alpha0+
Build ID: 50799a721c7ddcf9475a1b79984ed64ddd7cdf57
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 7 Commit Notification 2017-08-02 08:20:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44befa2b6c447fcf9f4b13dbb3c5ffd62a5bdbac&h=libreoffice-5-4

tdf#109790 RTF import: keep remembering paragraph style between \cell and \row

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Miklos Vajna 2017-09-05 15:28:48 UTC
*** Bug 104077 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2023-12-05 07:50:15 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b63a12d481cd26f960f97f74e5a4d764966db338

tdf#148540 Revert "tdf#109790 RTF import: keep remembering...

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.