tdf#109790 RTF import: keep remembering paragraph style between \cell and \row

This is the opposite situation as tdf#44715, where the problem was that
style was not reset between in-cell paragraphs.

Here we don't want to reset the paragraph style too early, so that
direct (character) formatting isn't lost just because the theoretical
end-of-row character would not have the same direct formatting.

(cherry picked from commit aaa6a5202a447fb4e86d5f016d8e79fbc34a3ed7)

Conflicts:
	writerfilter/source/rtftok/rtfdocumentimpl.cxx
	writerfilter/source/rtftok/rtfdocumentimpl.hxx

Change-Id: I9bb54f37804f5889fb10504ae890362a2e42122c
Reviewed-on: https://gerrit.libreoffice.org/40625
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>